syntax = "proto3";

package dispatcherDomain;

// "directory/;package_name"
option go_package = "/;dispatcherDomain";

service DispatcherDomainService {
  rpc Add (AddRequest) returns (UUID);
  rpc Update (UpdateRequest) returns (Empty);
  rpc Remove (RemoveRequest) returns (Empty);
}

message AddRequest {
  string name = 1;
  string url = 2;
}

message UpdateRequest {
  string domain_id = 1;
  string name = 2;
  string url = 3;
}

message RemoveRequest {
  string domain_id = 1;
}

// Responses
message UUID {
  string value = 1;
}

message Empty {
}
